# nama_backend

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile  README.md  alembic.ini  ecs-task-definition.json  go.mod  main.go  pyproject.toml
.github/workflows/: app-image-validate.yml  app-image.yml  backend.yml  bastion-session.yml  ci.yml  deploy-backend.yml  deploy-frontend.yml  deploy-hello-aws.yml  infra.yml  llm-evals.yml  sync-annual-earnings.yml  sync-congress.yml  sync-constituents.yml  sync-estimates.yml  sync-etfs.yml  sync-fundamentals.yml  sync-index-membership.yml  sync-insider-transactions.yml  sync-institutional-ownership.yml  sync-market-brief.yml  sync-news.yml  sync-profiles.yml  sync-quarterly-earnings.yml  sync-recommendations.yml  sync-revenue-segments.yml  sync-stock-performance.yml  sync-universe.yml  terraform.yml  tests.yml
alembic/: env.py
alembic/versions/: 0001_create_index_constituents.py  0002_create_stocks_and_analyst_estimates.py  0003_create_stock_company_profile.py  0003_create_stock_quarterly_earnings.py  0004_add_revenue_actual_to_quarterly_earnings.py  0005_create_stock_annual_earnings.py  0006_drop_stock_analyst_estimates.py  0007_create_stock_recommendation_trends.py  0008_add_annual_eps_consensus.py  0009_add_exchange_to_stocks.py  0010_rename_stocks_symbol_to_ticker.py  0011_create_stock_universe.py  0011_stocks_growth_yoy.py  0011_universe_on_stocks.py  0012_universe_on_stocks.py  0013_index_flags_on_stocks.py  0013_stocks_industry.py  0014_index_flags_on_stocks.py  0015_drop_index_constituents.py  0016_create_etfs.py  0016_stock_pe.py  0016_stocks_forward_growth.py  0017_stock_pe.py  0018_etf_arca_to_nyse.py  0018_stocks_forward_growth.py  0019_etf_arca_to_nyse.py  0020_etf_profile.py  0021_drop_etf_returns.py  0022_analysis_cache.py  0023_analyst_trends.py  0023_create_stock_news.py  0024_analyst_rating_changes.py  0024_analyst_trends.py  0025_analyst_rating_changes.py  0026_revenue_segments.py  0027_fcf.py  0028_insider_txns.py  0028_scorecard_sections.py  0029_insider_txns.py  0029_merge_heads.py  (+15 more)
app/: db.py  logging_config.py  main.py  models.py  rate_limit.py
app/endpoints/: analysis_endpoints.py  analyst_endpoints.py  annual_earnings_endpoints.py  chart_endpoints.py  congress_endpoints.py  docs_endpoints.py  earnings_calendar_endpoints.py  error_handlers.py  etf_endpoints.py  heatmap_endpoints.py  insider_transactions_endpoints.py  institutional_ownership_endpoints.py  logo_endpoints.py  market_brief_endpoints.py  market_endpoints.py  news_endpoints.py  options_endpoints.py  quarterly_earnings_endpoints.py  research_endpoints.py  revenue_segments_endpoints.py  sentiment_endpoints.py  seo_endpoints.py  ticker_endpoints.py  wiring.py  yields_endpoints.py
app/evals/: __init__.py  __main__.py  (+6 more)
docs/: aws-cicd-setup.md  frontend-migration-ticker-endpoints.md
infra/: README.md  bastion.ps1  ci-iam-policy.json  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
migrations/: env.py
scripts/: build_constituents.py  sync_constituents.py  sync_estimates.py  sync_profiles.py
tests/: conftest.py  test_caching_bulk_performance_provider.py  test_caching_company_profile_provider.py  test_caching_revenue_provider.py  test_caching_segment_revenue_provider.py  test_composite_company_profile_provider.py  test_constituents.py  test_cors.py  test_db_cached_company_profile_provider.py  test_db_cached_estimates_provider.py  test_finnhub_company_profile_provider.py  test_finnhub_earnings_calendar_provider.py  test_finnhub_earnings_provider.py  test_finnhub_fundamentals_provider.py  test_finnhub_recommendation_provider.py  test_fmp_estimates_provider.py  test_fmp_logo_provider.py  test_fmp_profile_provider.py  test_fundamentals_analysis.py  test_indicators.py  test_logging_config.py  test_logodev_provider.py  test_migrations.py  test_progress.py  test_rate_limiting.py  test_ratings_analysis.py  test_sec_edgar_revenue_provider.py  test_sec_edgar_segment_revenue_provider.py  test_stock_estimates_repository.py  test_stock_profile_repository.py  test_stocks.py  test_stocks_provider.py  test_sync_cli.py  test_sync_runtime.py  test_users.py
tests_llm/: bedrock_judge.py  conftest.py  seed_eval_db.py  test_research_agent.py
(+1464 files in other folders)
