[project]
name = "nama-backend"
version = "0.1.0"
description = "A lightweight Python FastAPI backend with SQLite."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlalchemy>=2.0",
]

# PostgreSQL driver — install with `pip install -e ".[postgres]"` in any
# environment that talks to RDS. Local dev and tests use SQLite and don't need it.
[project.optional-dependencies]
postgres = [
    "psycopg[binary]>=3.1",
]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "alembic>=1.13",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
