[project]
name = "nama-backend"
version = "0.1.0"
description = "A lightweight Python FastAPI backend with SQLite."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlalchemy>=2.0",
    "alpaca-py>=0.30",  # Alpaca market-data SDK (stocks feature)
    "httpx>=0.27",      # direct HTTP for the logo source (Financial Modeling Prep)
    "alembic>=1.13",    # database schema migrations (alembic upgrade head)
    "yfinance>=0.2",    # Yahoo Finance — quarterly + annual earnings timelines (no key; pulls pandas)
    "lxml>=4.9",        # required by yfinance's Ticker.earnings_dates: pandas.read_html parses
                        # Yahoo's HTML with it. Not a hard yfinance dep, but the quarterly-earnings
                        # live path fails without it ("Import lxml failed"), so pin it explicitly.
    "slowapi>=0.1.9",   # in-process per-client (per-IP) rate limiting — a token bucket keyed on the
                        # caller's IP so one abusive client can't exhaust the service. In-memory
                        # counter (fine for a single task); swap storage_uri for Redis to scale out.
    "jinja2>=3.1",      # server-rendered SEO content pages (app/stocks/seo): FastAPI's
                        # Jinja2Templates renders the crawlable per-entity HTML that the
                        # client-rendered React app can't give search / AI crawlers.
]

# PostgreSQL driver — install with `pip install -e ".[postgres]"` anywhere that
# talks to RDS. Local dev and tests use SQLite and don't need it.
[project.optional-dependencies]
postgres = [
    "psycopg[binary]>=3.1",
]
# Claude on Amazon Bedrock for the AI analysis endpoint (GET
# /stocks/{symbol}/analysis). Heavy (pulls boto3) and only needed where that
# endpoint serves, so it's an opt-in extra like the Postgres driver — the
# adapter imports it lazily, so the app and the offline tests run without it.
bedrock = [
    "anthropic[bedrock]>=0.40",
]
dev = [
    "pytest>=8.0",
]
# The metered LLM-eval layer (tests_llm/): DeepEval grades the live research agent's
# answers with a Bedrock judge. Not part of the offline suite — run explicitly via
# `pytest tests_llm` (needs AWS Bedrock access and a running server).
llm-evals = [
    "deepeval>=4.0",
    "anthropic[bedrock]>=0.40",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
